--- a/index.html
+++ b/index.html
@@ -50,8 +50,24 @@
   <section id="projects" class="container">
     <h2>Projects</h2>
     <div class="project-card">
-      <h3>Project 1</h3>
-      <p>Description of the project and technologies used.</p>
+      <h3>CloudContacts</h3>
+      <p>It is a Java & Spring Boot project offering secure 
+        authentication (Email, Google, Github), cloud photo storage 
+        and integrated Email communication. It features dynamic UI 
+        themes, personalized profiles, advanced search making it a 
+        user-friendly experience. </p>
+      <div class="button-group">
+        <button onclick="viewProject()">View Code</button>
+        <button onclick="liveDemo()">Live Demo</button>
+      </div>
+    </div>
+    <div class="project-card">
+      <h3>VideoHub</h3>
+      <p>This Video Streaming Application helps us to upload videos 
+        in the backend using Spring Boot, utilizing Spring Web, 
+        Lombok, and Spring Data JPA with MySQL for efficient data 
+        management, focusing on robust video handling and 
+        backend integration. </p>
       <div class="button-group">
         <button onclick="viewProject()">View Code</button>
         <button onclick="liveDemo()">Live Demo</button>
@@ -94,7 +110,7 @@
       </div>
       <div class="skill mongodb">
         <a href="https://www.mongodb.com/docs/" target="_blank" class="skill mongodb">
-          <i class="fa-solid fa-server" style="color: #ffffff;"></i>
+          <i class="fa-solid fa-server"></i>
           <p>MongoDB</p>
         </a>
       </div>
@@ -187,12 +203,12 @@
 
   <!-- Footer -->
   <footer class="footer">
-    <p>&copy; 2024 MyPortfolio. All rights reserved.</p>
+    <p>&copy; <span id="year"></span> Raghav Dhir. All rights reserved.</p>
     <div class="social-icons">
-      <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-      <a href="#"><i class="fa-brands fa-github"></i></a>
-      <a href="#"><i class="fa-brands fa-twitter"></i></a>
-      <a href="#"><i class="fa-solid fa-envelope"></i></a>
+      <a href="https://www.linkedin.com/in/raghvdhir"><i class="fa-brands fa-linkedin"></i></a>
+      <a href="https://github.com/raghavv-dhir"><i class="fa-brands fa-github"></i></a>
+      <a href="https://x.com/raghvdhir"><i class="fa-brands fa-twitter"></i></a>
+      <a href="mailto:raghavdhir1510@gmail.com"><i class="fa-solid fa-envelope"></i></a>
     </div>
   </footer>
 </body>
