--- a/index.html
+++ b/index.html
@@ -3,24 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Portfolio</title>
+  <title>Raghav Dhir: Portfolio</title>
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"> <!-- For Icons -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-     <!-- Header -->
+
+<div id="loading-spinner">
+    <div class="spinner"></div>
+</div>
+
+
   <header class="header">
     <nav class="nav-links">
       <a href="#about">About</a>
       <a href="#projects">Projects</a>
       <a href="#skills">Skills</a>
-      <a href="#contact">Contact</a>
+      <a href="#certifications">Certifications</a>
     </nav>
   </header>
-  <!-- Header Section -->
+  
   <header>
     <div class="container hero">
       <h1>Hello, I'm Raghav Dhir <span class="wave">👋</span></h1>
@@ -32,7 +37,7 @@
     </div>
   </header>
 
-  <!-- About Section -->
+
   <section id="about" class="container">
     <h2>About Me</h2>
     <p>A well-organized, and goal-oriented under
@@ -46,7 +51,7 @@
       efficiency and quality. </p>
   </section>
 
-  <!-- Projects Section -->
+
   <section id="projects" class="container">
     <h2>Projects</h2>
     <div class="project-card">
@@ -114,11 +119,11 @@
           <p>MongoDB</p>
         </a>
       </div>
-      <!-- Add more skills as needed -->
+
     </div>
   </section>
   
-  <!-- Certifications Section -->
+
   <section id="certifications" class="container">
     <h2>Certifications</h2>
     <div class="certifications-list">
@@ -188,12 +193,12 @@
         <p>Date: August 2024</p>
         <a href="images/java kg.png" target="_blank" class="cert-btn">View Certificate</a>
       </div>
-      <!-- Add more certifications as needed -->
+      
     </div>
   </section>
 
-  <!-- "Buy Me a Coffee" Section -->
-  <section class="support-section">
+
+  <section id= "support" class="support-section">
     <h2>Fuel My Code!</h2>
     <p>Your support helps me turn ideas into reality. Coffee? Yes, please!</p>
     <a href="https://razorpay.me/@raghavdhir" target="_blank" class="buy-me-coffee-button">
@@ -201,19 +206,18 @@
     </a>
 </section>
 
-  <!-- Footer -->
-  <footer class="footer">
-    <p>&copy; <span id="year"></span> Raghav Dhir. All rights reserved.</p>
-    <div class="social-icons">
-      <a href="https://www.linkedin.com/in/raghvdhir"><i class="fa-brands fa-linkedin"></i></a>
-      <a href="https://github.com/raghavv-dhir"><i class="fa-brands fa-github"></i></a>
-      <a href="https://x.com/raghvdhir"><i class="fa-brands fa-twitter"></i></a>
-      <a href="mailto:raghavdhir1510@gmail.com"><i class="fa-solid fa-envelope"></i></a>
-    </div>
-  </footer>
-</body>
 
+  <footer class="footer">
+    <p>Made with ❤️ by Raghav Dhir in 2024</p>
+    <div class="social-icons">
+        <a href="https://www.linkedin.com/in/raghvdhir"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="https://github.com/raghavv-dhir"><i class="fa-brands fa-github"></i></a>
+        <a href="https://x.com/raghvdhir"><i class="fa-brands fa-twitter"></i></a>
+        <a href="mailto:raghavdhir1510@gmail.com"><i class="fa-solid fa-envelope"></i></a>
+    </div>
+</footer>
+</body>
   <script src="script.js" defer></script>
-  
+
 </body>
 </html>
