Added Glassmorphic effect on cards and made some improvements

--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
 
   <section id="about" class="container">
     <h2>About Me</h2>
-    <p>A well-organized, and goal-oriented under
-      graduate possessing excellent communication 
-      and problem-solving skills with a flair to explore 
-      suitable 
-      avenues 
-      in 
-      Computer Science 
-      Engineering while developing projects with 
-      efficiency and quality. </p>
+    <div class="about-box">
+      <p>
+        A well-organized and goal-oriented undergraduate possessing excellent 
+        communication and problem-solving skills with a flair to explore suitable 
+        avenues in Computer Science Engineering while developing projects with 
+        efficiency and quality.
+      </p>
+    </div>
   </section>
+  
 
 
   <section id="projects" class="container">
@@ -83,45 +83,34 @@
   <section id="skills" class="container">
     <h2>Skills</h2>
     <div class="skills-list">
-      <div class="skill java">
-        <a href="https://docs.oracle.com/javase/8/docs/" target="_blank" class="skill java">
-          <i class="fa-brands fa-java"></i>
-          <p>Java</p>
-        </a>
-      </div>
-      <div class="skill mysql">
-        <a href="https://dev.mysql.com/doc/" target="_blank" class="skill mysql">
-          <i class="fa-solid fa-database"></i>
-          <p>MySQL</p>
-        </a>
-      </div>
-      <div class="skill javascript">
-        <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank" class="skill javascript">
-          <i class="fa-brands fa-js"></i>
-          <p>JavaScript</p>
-        </a>
-      </div>
-      <div class="skill html">
-        <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank" class="skill html">
-          <i class="fa-brands fa-html5"></i>
-          <p>HTML</p>
-        </a>
-      </div>
-      <div class="skill css">
-        <a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank" class="skill css">
-          <i class="fa-brands fa-css3-alt"></i>
-          <p>CSS</p>
-        </a>
-      </div>
-      <div class="skill mongodb">
-        <a href="https://www.mongodb.com/docs/" target="_blank" class="skill mongodb">
-          <i class="fa-solid fa-server"></i>
-          <p>MongoDB</p>
-        </a>
-      </div>
-
+      <a href="https://docs.oracle.com/javase/8/docs/" target="_blank" class="skill">
+        <i class="fa-brands fa-java"></i>
+        <p>Java</p>
+      </a>
+      <a href="https://dev.mysql.com/doc/" target="_blank" class="skill">
+        <i class="fa-solid fa-database"></i>
+        <p>MySQL</p>
+      </a>
+      <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank" class="skill">
+        <i class="fa-brands fa-js"></i>
+        <p>JavaScript</p>
+      </a>
+      <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank" class="skill">
+        <i class="fa-brands fa-html5"></i>
+        <p>HTML</p>
+      </a>
+      <a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank" class="skill">
+        <i class="fa-brands fa-css3-alt"></i>
+        <p>CSS</p>
+      </a>
+      <a href="https://www.mongodb.com/docs/" target="_blank" class="skill">
+        <i class="fa-solid fa-server"></i>
+        <p>MongoDB</p>
+      </a>
     </div>
   </section>
+  
+  
   
 
   <section id="certifications" class="container">
@@ -198,13 +187,14 @@
   </section>
 
 
-  <section id= "support" class="support-section">
+  <section id="support" class="support-section">
     <h2>Fuel My Code!</h2>
     <p>Your support helps me turn ideas into reality. Coffee? Yes, please!</p>
     <a href="https://razorpay.me/@raghavdhir" target="_blank" class="buy-me-coffee-button">
-        Buy me a coffee ☕
+      Buy me a coffee ☕
     </a>
-</section>
+  </section>
+  
 
 
   <footer class="footer">
