Added glowing effect and made certain improvements

--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@
 </div>
 
 
-  <header class="header">
-    <nav class="nav-links">
-      <a href="#about">About</a>
-      <a href="#projects">Projects</a>
-      <a href="#skills">Skills</a>
-      <a href="#certifications">Certifications</a>
-    </nav>
-  </header>
+<header class="header">
+  <nav class="nav-links">
+    <a href="#about">About</a>
+    <a href="#projects">Projects</a>
+    <a href="#skills">Skills</a>
+    <a href="#certifications">Certifications</a>
+  </nav>
+</header>
+
   
   <header>
     <div class="container hero">
@@ -42,10 +43,7 @@
     <h2>About Me</h2>
     <div class="about-box">
       <p>
-        A well-organized and goal-oriented undergraduate possessing excellent 
-        communication and problem-solving skills with a flair to explore suitable 
-        avenues in Computer Science Engineering while developing projects with 
-        efficiency and quality.
+        I'm a well-organized and driven undergraduate with strong communication and problem-solving skills. I’m passionate about exploring different areas of Computer Science Engineering and enjoy working on projects that are both efficient and high-quality.
       </p>
     </div>
   </section>
